testsuite/tests/typecheck/should_compile/tc010.alan
foo(x : int) : int
{
  return 42;
}
