testsuite/tests/typecheck/should_fail/tcfail005.alan
retStmtErr() : proc
  foo() : byte
  {
    return 5;
  }
{
  foo();
}
